--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">BirthdayReminderApp</string>
+    <string name="app_name">Birthday Reminder</string>
+    <string name="add_reminder">add reminder</string>
+    <string name="name">Name</string>
+    <string name="birthdate">Birthdate</string>
+    <string name="contact_no">Contact No</string>
+    <string name="email_id">Email-id</string>
+    <string name="submit">Submit</string>
+    <string name="save">Save</string>
+    <string name="add_reminder_camel_case">Add Reminder</string>
 </resources>
